--- a/package.json
+++ b/package.json
@@ -2,30 +2,41 @@
   "name": "@liangshen/alfred",
   "version": "1.1.20",
   "description": "Creat, Develop and Publish Alfred workflows",
-  "type": "module",
-  "main": "./dist/src/index.js",
+  "types": "./dist/types/index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
   "bin": {
     "run-node": "bin/run-node.sh",
     "alfred-init": "bin/init.js",
-    "alfred-cleanup": "bin/cleanup.js"
+    "alfred-cleanup": "bin/cleanup.js",
+    "alfred-sync": "bin/sync.js"
   },
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "repository": "liangshen001/alfred",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
+    "build": "rollup -c --bundleConfigAsCjs",
     "postinstall": "alfred-init",
-    "preuninstall": "alfred-cleanup"
+    "preuninstall": "alfred-cleanup",
+    "prepublish": "alfred-sync"
   },
   "keywords": [],
-  "author": "",
+  "author": "Wang Liang",
   "license": "ISC",
   "devDependencies": {
     "@liangshen/tsconfig": "^1.0.3",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
-    "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4",
-    "jest": "^29.0.1"
-  },
-  "dependencies": {}
+    "jest": "^29.4.2",
+    "rollup": "^3.15.0",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.7.4"
+  }
 }
