perf: 使用rollup构建 添加自动部署工作流

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "test": "jest",
     "build": "rollup -c --bundleConfigAsCjs",
     "postinstall": "alfred-init",
-    "preuninstall": "alfred-cleanup",
-    "prepublish": "alfred-sync"
+    "preuninstall": "alfred-cleanup"
   },
   "keywords": [],
   "author": "Wang Liang",
